kubernetes/project-final/back.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: back
spec:
  selector:
    matchLabels:
      app: back
  replicas: 1
  template:
    metadata:
      labels:
        app: back
    spec:
      containers:
      - name: back
        image: back_build
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: back
spec:
  selector:
    app: back
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
