kubernetes/project-final/sql.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sql
spec:
  selector:
    matchLabels:
      app: sql
  replicas: 1
  template:
    metadata:
      labels:
        app: sql
    spec:
      containers:
      - name: sql
        image: postgres
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: sql
spec:
  selector:
    app: sql
  ports:
  - port: 5432
    targetPort: 5432
    protocol: TCP
