kubernetes/project-final/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  labels:
    name: myingress
spec:
  rules:
  - host: front.localhost
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: front
            port: 
              number: 80
  - host: back.localhost
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: back
            port: 
              number: 80
